istio-helm-overrides-app-manifests/custom-service-manifest/gke-backend-kubernetes-resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gke-backend-rest-api
  namespace: istio-poc
  labels:
    run: golang
    type: poc
    access: internal
spec:
  selector:
    matchLabels:
      app: golang
      api: rest
      type: poc
  template:
    metadata:
      labels:
        app: golang
        api: rest
        type: poc
    spec:
      serviceAccountName: gke-backend-rest-api-sa
      containers:
        - name: golang-rest-api
          image: gcr.io/rmishra-serverless-sandbox/backend-api
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 1000
          resources:
            requests:
              memory: "10Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              name: http

---
apiVersion: v1
kind: Service
metadata:
  name: gke-backend-rest-api
  namespace: istio-poc
  labels:
    app: golang
    api: rest
    type: poc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: golang
    api: rest
    type: poc
